# astro-provider-anyscale

./: .astro-registry.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.rst  README.md  codespell-ignore-words.txt  pyproject.toml
.github/workflows/: docs.yml  python-app.yml  python-publish.yml  release.yml  test.yml
anyscale_provider/: __init__.py
anyscale_provider/example_dags/: anyscale_dag.py  anyscale_service.py
anyscale_provider/example_dags/ray_scripts/: script-gpu.py  script.py
anyscale_provider/hooks/: anyscale.py
anyscale_provider/operators/: anyscale.py
anyscale_provider/triggers/: anyscale.py
docs/: CHANGELOG.rst  CONTRIBUTING.rst  conf.py  index.rst  requirements.txt
docs/api/: anyscale_provider.hooks.rst  anyscale_provider.operators.rst  anyscale_provider.rst  anyscale_provider.triggers.rst  modules.rst
example_dags/: anyscale_job.py  anyscale_service.py
example_dags/ray_scripts/: ray-job.py  ray-serve.py
scripts/: validate_operators_init.py
scripts/test/: integration_test.sh  pre-install-airflow.sh  unit_cov.sh  unit_test.sh
tests/: utils.py
tests/dags/: test_dag_example.py  utils.py
tests/dags/example_dags/: anyscale_dag.py  anyscale_job.py  anyscale_service.py
tests/dags/example_dags/ray_scripts/: ray-serve.py  script-gpu.py
tests/hooks/: test_anyscale_hook.py
tests/operators/: test_anyscale_operators.py
tests/triggers/: test_anyscale_triggers.py
