[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astro-provider-anyscale"
authors = [{ name = "Astronomer", email = "humans@astronomer.io" }]
license = { text = "Apache License 2.0" }
description = "An Apache Airflow provider package built by Astronomer to integrate with Anyscale."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
dynamic = ["version"]
requires-python = "~=3.8"
dependencies = [
    "apache-airflow>=2.7",
    "pyyaml",
    "anyscale~=0.24.37"
]

[project.urls]
Homepage = "https://astronomer.io"
Source = "https://github.com/astronomer/astro-provider-anyscale/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "anyscale_provider.__init__:get_provider_info"

[tool.hatch.version]
path = "anyscale_provider/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/anyscale_provider"]

[tool.hatch.build.targets.wheel]
packages = ["/anyscale_provider"]

######################################
# TESTING
######################################

[tool.hatch.envs.tests]
dependencies = [
    "astro-provider-anyscale[tests]",
    "types-PyYAML",
    "types-attrs",
    "types-requests",
    "types-python-dateutil",
    "apache-airflow=={matrix:airflow}.0",
    "pytest>=6.0",
    "pytest-cov",
    "pre-commit"
]
pre-install-commands = ["sh scripts/test/pre-install-airflow.sh {matrix:airflow} {matrix:python}"]

[[tool.hatch.envs.tests.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]
airflow = ["2.7", "2.8", "2.9"]

[tool.hatch.envs.tests.overrides]
matrix.airflow.dependencies = [
    { value = "typing_extensions<4.6", if = ["2.6"] }
]

[tool.hatch.envs.tests.scripts]
freeze = "pip freeze"
test = 'sh scripts/test/unit_test.sh'
test-cov = 'sh scripts/test/unit_cov.sh'
test-integration = 'sh scripts/test/integration_test.sh'
type-check = " pre-commit run mypy --files anyscale_provider/**/*"

######################################
# THIRD PARTY TOOLS
######################################
[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
known_third_party = ["airflow", "jinja2"]

[tool.mypy]
strict = true
ignore_missing_imports = true
no_warn_unused_ignores = true

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["C901", "I", "F"]
ignore = ["F541"]
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.distutils.bdist_wheel]
universal = true